<resources>
    <string name="app_name">nnsg</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_artist_name">Artist Name</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">간단하게 회원가입하기</string>
    <string name="btn_link_to_login">이미 회원이라면, 로그인하세요!</string>

    <string name="item_genre">#힙합</string>
    <string name="item_region">#신촌</string>

</resources>
